--- a/pv_inverter/packages/deye_hybrid_1p/grid.yaml
+++ b/pv_inverter/packages/deye_hybrid_1p/grid.yaml
@@ -1,4 +1,4 @@
-# Copyright 2025 Lewa-Reka & Harvey Dent
+﻿# Copyright 2025 Lewa-Reka & Harvey Dent
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -132,18 +132,33 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: ${modbus_controller_id}
+    id: total_energy_bought_low_bytes 
+    address: 78
+    register_type: holding
+    value_type: U_WORD
+    internal: true 
+
+  - platform: modbus_controller
+    modbus_controller_id: ${modbus_controller_id}
+    id: total_energy_bought_high_bytes 
+    address: 80
+    register_type: holding
+    value_type: U_WORD
+    internal: true 
+
+  - platform: template
     name: "Total Energy Bought"
     id: total_energy_bought
-    register_type: holding
-    address: 78
     unit_of_measurement: "kWh"
     device_class: energy
     state_class: "total_increasing"
     accuracy_decimals: 1
-    value_type: U_DWORD_R
-    filters:
-      - multiply: 0.1
     icon: "mdi:transmission-tower-import"
+    lambda: |-
+      auto high = id(total_energy_bought_low_bytes).state;
+      auto low = id(total_energy_bought_high_bytes ).state;
+      float calculated_value = ((high * 65536.0) + low) * 0.1;
+      return {};
 
   - platform: modbus_controller
     modbus_controller_id: ${modbus_controller_id}
