--- a/pv_inverter/packages/deye_hybrid_3p/grid.yaml
+++ b/pv_inverter/packages/deye_hybrid_3p/grid.yaml
@@ -374,6 +374,8 @@ binary_sensor:
     address: 597
     bitmask: 0x01
     device_class: problem
+    filters:
+      - invert:
     entity_category: diagnostic
     icon: "mdi:check-circle"
 
@@ -384,6 +386,8 @@ binary_sensor:
     address: 597
     bitmask: 0x02
     device_class: problem
+    filters:
+      - invert:
     entity_category: diagnostic
     icon: "mdi:check-circle"
 
@@ -394,6 +398,8 @@ binary_sensor:
     address: 597
     bitmask: 0x04
     device_class: problem
+    filters:
+      - invert:
     entity_category: diagnostic
     icon: "mdi:check-circle"
 
