--- a/pv_inverter/packages/deye_hybrid_3p/tou.yaml
+++ b/pv_inverter/packages/deye_hybrid_3p/tou.yaml
@@ -99,77 +99,418 @@ datetime:
           value: !lambda ${func_time_to_int}
 
 switch:
-  - platform: modbus_controller
-    use_write_multiple: true
-    modbus_controller_id: ${modbus_controller_id}
+  - platform: template
     name: "Time of Use"
-    id: switch_time_of_use
-    register_type: holding
-    address: 146
-    bitmask: 1
     icon: "mdi:toggle-switch"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_enabled_raw).state & 0b00000001) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state | 0b00000001;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state & ~0b00000001;"
 
-  - platform: modbus_controller
-    use_write_multiple: true
-    modbus_controller_id: ${modbus_controller_id}
-    name: "Time of Use 1 Charge Enable"
-    id: switch_time_point_1_charge_enable
-    register_type: holding
-    address: 172
-    bitmask: 1
-    icon: "mdi:battery-plus"
+  - platform: template
+    name: "Time of Use Monday"
+    icon: "mdi:toggle-switch"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_enabled_raw).state & 0b00000010) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state | 0b00000010;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state & ~0b00000010;"
 
-  - platform: modbus_controller
-    use_write_multiple: true
-    modbus_controller_id: ${modbus_controller_id}
-    name: "Time of Use 2 Charge Enable"
-    id: switch_time_point_2_charge_enable
-    register_type: holding
-    address: 173
-    bitmask: 1
-    icon: "mdi:battery-plus"
+  - platform: template
+    name: "Time of Use Tuesday"
+    icon: "mdi:toggle-switch"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_enabled_raw).state & 0b00000100) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state | 0b00000100;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state & ~0b00000100;"
 
-  - platform: modbus_controller
-    use_write_multiple: true
-    modbus_controller_id: ${modbus_controller_id}
-    name: "Time of Use 3 Charge Enable"
-    id: switch_time_point_3_charge_enable
-    register_type: holding
-    address: 174
-    bitmask: 1
-    icon: "mdi:battery-plus"
+  - platform: template
+    name: "Time of Use Wednesday"
+    icon: "mdi:toggle-switch"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_enabled_raw).state & 0b00001000) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state | 0b00001000;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state & ~0b00001000;"
 
-  - platform: modbus_controller
-    use_write_multiple: true
-    modbus_controller_id: ${modbus_controller_id}
-    name: "Time of Use 4 Charge Enable"
-    id: switch_time_point_4_charge_enable
-    register_type: holding
-    address: 175
-    bitmask: 1
-    icon: "mdi:battery-plus"
+  - platform: template
+    name: "Time of Use Thursday"
+    icon: "mdi:toggle-switch"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_enabled_raw).state & 0b00010000) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state | 0b00010000;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state & ~0b00010000;"
 
-  - platform: modbus_controller
-    use_write_multiple: true
-    modbus_controller_id: ${modbus_controller_id}
-    name: "Time of Use 5 Charge Enable"
-    id: switch_time_point_5_charge_enable
-    register_type: holding
-    address: 176
-    bitmask: 1
-    icon: "mdi:battery-plus"
+  - platform: template
+    name: "Time of Use Friday"
+    icon: "mdi:toggle-switch"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_enabled_raw).state & 0b00100000) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state | 0b00100000;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state & ~0b00100000;"
 
-  - platform: modbus_controller
-    use_write_multiple: true
-    modbus_controller_id: ${modbus_controller_id}
-    name: "Time of Use 6 Charge Enable"
-    id: switch_time_point_6_charge_enable
-    register_type: holding
-    address: 177
-    bitmask: 1
+  - platform: template
+    name: "Time of Use Saturday"
+    icon: "mdi:toggle-switch"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_enabled_raw).state & 0b01000000) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state | 0b01000000;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state & ~0b01000000;"
+
+  - platform: template
+    name: "Time of Use Sunday"
+    icon: "mdi:toggle-switch"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_enabled_raw).state & 0b10000000) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state | 0b10000000;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_enabled_raw
+          value: !lambda "return (int)id(time_of_use_enabled_raw).state & ~0b10000000;"
+
+  - platform: template
+    name: "Time of Use 1 Grid Charge"
     icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_1_raw).state & 0b00000001) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_1_raw
+          value: !lambda "return (int)id(time_of_use_1_raw).state | 0b00000001;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_1_raw
+          value: !lambda "return (int)id(time_of_use_1_raw).state & ~0b00000001;"
+
+  - platform: template
+    name: "Time of Use 1 Gen"
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_1_raw).state & 0b00000010) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_1_raw
+          value: !lambda "return (int)id(time_of_use_1_raw).state | 0b00000010;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_1_raw
+          value: !lambda "return (int)id(time_of_use_1_raw).state & ~0b00000010;"
+
+  - platform: template
+    name: "Time of Use 1 Sell"
+    id: switch_time_of_use_1_sell
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    disabled_by_default: true
+    lambda: "return ((int)id(time_of_use_1_raw).state & 0b00100000) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_1_raw
+          value: !lambda "return (int)id(time_of_use_1_raw).state | 0b00100000;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_1_raw
+          value: !lambda "return (int)id(time_of_use_1_raw).state & ~0b00100000;"
+
+  - platform: template
+    name: "Time of Use 2 Grid Charge"
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_2_raw).state & 0b00000001) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_2_raw
+          value: !lambda "return (int)id(time_of_use_2_raw).state | 0b00000001;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_2_raw
+          value: !lambda "return (int)id(time_of_use_2_raw).state & ~0b00000001;"
+
+  - platform: template
+    name: "Time of Use 2 Gen"
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_2_raw).state & 0b00000010) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_2_raw
+          value: !lambda "return (int)id(time_of_use_2_raw).state | 0b00000010;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_2_raw
+          value: !lambda "return (int)id(time_of_use_2_raw).state & ~0b00000010;"
+
+  - platform: template
+    name: "Time of Use 2 Sell"
+    id: switch_time_of_use_2_sell
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    disabled_by_default: true
+    lambda: "return ((int)id(time_of_use_2_raw).state & 0b00100000) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_2_raw
+          value: !lambda "return (int)id(time_of_use_2_raw).state | 0b00100000;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_2_raw
+          value: !lambda "return (int)id(time_of_use_2_raw).state & ~0b00100000;"
+
+  - platform: template
+    name: "Time of Use 3 Grid Charge"
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_3_raw).state & 0b00000001) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_3_raw
+          value: !lambda "return (int)id(time_of_use_3_raw).state | 0b00000001;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_3_raw
+          value: !lambda "return (int)id(time_of_use_3_raw).state & ~0b00000001;"
+
+  - platform: template
+    name: "Time of Use 3 Gen"
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_3_raw).state & 0b00000010) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_3_raw
+          value: !lambda "return (int)id(time_of_use_3_raw).state | 0b00000010;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_3_raw
+          value: !lambda "return (int)id(time_of_use_3_raw).state & ~0b00000010;"
+
+  - platform: template
+    name: "Time of Use 3 Sell"
+    id: switch_time_of_use_3_sell
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    disabled_by_default: true
+    lambda: "return ((int)id(time_of_use_3_raw).state & 0b00100000) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_3_raw
+          value: !lambda "return (int)id(time_of_use_3_raw).state | 0b00100000;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_3_raw
+          value: !lambda "return (int)id(time_of_use_3_raw).state & ~0b00100000;"
+
+  - platform: template
+    name: "Time of Use 4 Grid Charge"
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_4_raw).state & 0b00000001) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_4_raw
+          value: !lambda "return (int)id(time_of_use_4_raw).state | 0b00000001;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_4_raw
+          value: !lambda "return (int)id(time_of_use_4_raw).state & ~0b00000001;"
+
+  - platform: template
+    name: "Time of Use 4 Gen"
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_4_raw).state & 0b00000010) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_4_raw
+          value: !lambda "return (int)id(time_of_use_4_raw).state | 0b00000010;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_4_raw
+          value: !lambda "return (int)id(time_of_use_4_raw).state & ~0b00000010;"
+
+  - platform: template
+    name: "Time of Use 4 Sell"
+    id: switch_time_of_use_4_sell
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    disabled_by_default: true
+    lambda: "return ((int)id(time_of_use_4_raw).state & 0b00100000) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_4_raw
+          value: !lambda "return (int)id(time_of_use_4_raw).state | 0b00100000;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_4_raw
+          value: !lambda "return (int)id(time_of_use_4_raw).state & ~0b00100000;"
+
+  - platform: template
+    name: "Time of Use 5 Grid Charge"
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_5_raw).state & 0b00000001) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_5_raw
+          value: !lambda "return (int)id(time_of_use_5_raw).state | 0b00000001;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_5_raw
+          value: !lambda "return (int)id(time_of_use_5_raw).state & ~0b00000001;"
+
+  - platform: template
+    name: "Time of Use 5 Gen"
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_5_raw).state & 0b00000010) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_5_raw
+          value: !lambda "return (int)id(time_of_use_5_raw).state | 0b00000010;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_5_raw
+          value: !lambda "return (int)id(time_of_use_5_raw).state & ~0b00000010;"
+
+  - platform: template
+    name: "Time of Use 5 Sell"
+    id: switch_time_of_use_5_sell
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    disabled_by_default: true
+    lambda: "return ((int)id(time_of_use_5_raw).state & 0b00100000) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_5_raw
+          value: !lambda "return (int)id(time_of_use_5_raw).state | 0b00100000;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_5_raw
+          value: !lambda "return (int)id(time_of_use_5_raw).state & ~0b00100000;"
+
+  - platform: template
+    name: "Time of Use 6 Grid Charge"
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_6_raw).state & 0b00000001) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_6_raw
+          value: !lambda "return (int)id(time_of_use_6_raw).state | 0b00000001;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_6_raw
+          value: !lambda "return (int)id(time_of_use_6_raw).state & ~0b00000001;"
+
+  - platform: template
+    name: "Time of Use 6 Gen"
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    lambda: "return ((int)id(time_of_use_6_raw).state & 0b00000010) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_6_raw
+          value: !lambda "return (int)id(time_of_use_6_raw).state | 0b00000010;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_6_raw
+          value: !lambda "return (int)id(time_of_use_6_raw).state & ~0b00000010;"
+
+  - platform: template
+    name: "Time of Use 6 Sell"
+    id: switch_time_of_use_6_sell
+    icon: "mdi:battery-plus"
+    optimistic: true
+    restore_mode: DISABLED
+    disabled_by_default: true
+    lambda: "return ((int)id(time_of_use_6_raw).state & 0b00100000) != 0;"
+    turn_on_action:
+      - number.set:
+          id: time_of_use_6_raw
+          value: !lambda "return (int)id(time_of_use_6_raw).state | 0b00100000;"
+    turn_off_action:
+      - number.set:
+          id: time_of_use_6_raw
+          value: !lambda "return (int)id(time_of_use_6_raw).state & ~0b00100000;"
 
 number:
+  - platform: modbus_controller
+    use_write_multiple: true
+    modbus_controller_id: ${modbus_controller_id}
+    name: "Time of Use Enabled Raw"
+    id: time_of_use_enabled_raw
+    register_type: holding
+    address: 146
+    internal: true
+
   - platform: modbus_controller
     use_write_multiple: true
     name: "Time of Use 1 Start Raw"
@@ -475,3 +816,57 @@ number:
     step: 1
     value_type: U_WORD
     icon: "mdi:battery-clock"
+
+  - platform: modbus_controller
+    use_write_multiple: true
+    modbus_controller_id: ${modbus_controller_id}
+    name: "Time of Use 1 Raw"
+    id: time_of_use_1_raw
+    register_type: holding
+    address: 172
+    internal: true
+
+  - platform: modbus_controller
+    use_write_multiple: true
+    modbus_controller_id: ${modbus_controller_id}
+    name: "Time of Use 2 Raw"
+    id: time_of_use_2_raw
+    register_type: holding
+    address: 173
+    internal: true
+
+  - platform: modbus_controller
+    use_write_multiple: true
+    modbus_controller_id: ${modbus_controller_id}
+    name: "Time of Use 3 Raw"
+    id: time_of_use_3_raw
+    register_type: holding
+    address: 174
+    internal: true
+
+  - platform: modbus_controller
+    use_write_multiple: true
+    modbus_controller_id: ${modbus_controller_id}
+    name: "Time of Use 4 Raw"
+    id: time_of_use_4_raw
+    register_type: holding
+    address: 175
+    internal: true
+
+  - platform: modbus_controller
+    use_write_multiple: true
+    modbus_controller_id: ${modbus_controller_id}
+    name: "Time of Use 5 Raw"
+    id: time_of_use_5_raw
+    register_type: holding
+    address: 176
+    internal: true
+
+  - platform: modbus_controller
+    use_write_multiple: true
+    modbus_controller_id: ${modbus_controller_id}
+    name: "Time of Use 6 Raw"
+    id: time_of_use_6_raw
+    register_type: holding
+    address: 177
+    internal: true
