Deye 3P: Add default Force Off Grid switch state (#48)

--- a/pv-inverter.Deye-SG0XHP3.yaml
+++ b/pv-inverter.Deye-SG0XHP3.yaml
@@ -27,6 +27,7 @@ substitutions:
   default_max_sell_power: "12000" # Watts. Adjust to your inverter
   default_system_work_mode: "Zero Export To Load" # "Selling First", "Zero Export To Load", "Zero Export To CT"
   default_solar_sell: "on" # "on", "off"
+  default_force_off_grid: "off" # "on", "off"
 
 packages:
   pv_inverter:
