--- a/pv_inverter/packages/deye_hybrid_1p/battery.yaml
+++ b/pv_inverter/packages/deye_hybrid_1p/battery.yaml
@@ -103,7 +103,7 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: ${modbus_controller_id}
-    name: "Battery"
+    name: "Battery SoC"
     register_type: holding
     address: 184
     unit_of_measurement: "%"
@@ -111,6 +111,19 @@ sensor:
     accuracy_decimals: 0
     value_type: U_WORD
     icon: "mdi:battery"
+
+  - platform: modbus_controller
+    use_write_multiple: true
+    modbus_controller_id: ${modbus_controller_id}
+    name: "Battery State"
+    address: 189
+    value_type: U_WORD
+    icon: "mdi:battery-charging-high"
+    entity_category: config
+    optionsmap:
+      "Charging": 0
+      "Idle": 1
+      "Discharging": 2
 
   - platform: modbus_controller
     modbus_controller_id: ${modbus_controller_id}
@@ -549,3 +562,4 @@ number:
     device_class: current
     value_type: U_WORD
     icon: "mdi:battery-charging-50"
+
