--- a/pv_inverter/packages/deye_hybrid_1p/battery.yaml
+++ b/pv_inverter/packages/deye_hybrid_1p/battery.yaml
@@ -113,13 +113,11 @@ sensor:
     icon: "mdi:battery"
 
   - platform: modbus_controller
-    use_write_multiple: true
     modbus_controller_id: ${modbus_controller_id}
     name: "Battery State"
     address: 189
-    value_type: U_WORD
-    icon: "mdi:battery-charging-high"
-    entity_category: config
+    value_type: holding
+    icon: "mdi:battery"
     optionsmap:
       "Charging": 0
       "Idle": 1
@@ -562,4 +560,5 @@ number:
     device_class: current
     value_type: U_WORD
     icon: "mdi:battery-charging-50"
+
 
